Fixed gap between headline and description when no description/headline

--- a/.storybook/themes/news.scss
+++ b/.storybook/themes/news.scss
@@ -879,6 +879,30 @@
 					font-size: var(--global-font-size-13),
 					font-weight: var(--global-font-weight-7),
 				),
+				large-manual-promo: (
+					gap: var(--global-spacing-4),
+				),
+				large-manual-promo-text: (
+					--grid-template-columns: 1fr,
+					grid-template-rows: auto 1fr,
+					components: (
+						heading: (
+							font-size: var(--global-font-size-10),
+							line-height: var(--global-line-height-4),
+						),
+						overline: (
+							font-size: var(--global-font-size-5),
+							line-height: var(--global-line-height-5),
+						),
+						paragraph: (
+							font-size: var(--global-font-size-4),
+							line-height: var(--global-line-height-4),
+						),
+						stack: (
+							gap: var(--global-spacing-4),
+						),
+					),
+				),
 				links-bar: (
 					gap: var(--global-spacing-2),
 				),
@@ -1279,24 +1303,6 @@
 						),
 					),
 				),
-				large-manual-promo: (
-					gap: var(--global-spacing-4),
-					components: (
-						overline: (
-							font-size: var(--global-font-size-5),
-							line-height: var(--global-line-height-5),
-						),
-						heading: (
-							font-size: var(--global-font-size-10),
-							line-height: var(--global-line-height-4),
-							margin-bottom: var(--global-spacing-4),
-						),
-						paragraph: (
-							font-size: var(--global-font-size-4),
-							line-height: var(--global-line-height-4),
-						),
-					),
-				),
 			),
 		),
 		desktop: (
@@ -1409,6 +1415,18 @@
 					font-size: var(--global-font-size-4),
 					line-height: var(--global-line-height-4),
 				),
+				large-manual-promo: (
+					gap: var(--global-spacing-6),
+					components: (
+						heading: (
+							font-size: var(--global-font-size-12),
+							line-height: var(--global-line-height-7),
+						),
+						overline: (
+							font-size: var(--global-font-size-7),
+						),
+					),
+				),
 				masthead: (
 					display: flex,
 				),
@@ -1514,18 +1532,6 @@
 						heading: (
 							font-size: var(--global-font-size-13),
 							line-height: var(--global-line-height-8),
-						),
-					),
-				),
-				large-manual-promo: (
-					gap: var(--global-spacing-6),
-					components: (
-						overline: (
-							font-size: var(--global-font-size-7),
-						),
-						heading: (
-							font-size: var(--global-font-size-12),
-							line-height: var(--global-line-height-7),
 						),
 					),
 				),
